2011-03-17  Sergio Martin <sergio.martin@artica.es>

	* operation/integria_incidents
	operation/integria_incidents/incident.incident.php
	operation/integria_incidents/incident.php
	operation/integria_incidents/incident.files.php
	operation/integria_incidents/incident.tracking.php
	operation/integria_incidents/incident_detail.php
	operation/integria_incidents/incident.workunits.php
	operation/integria_incidents/incident.download_file.php
	operation/integria_incidents/incident.list.php
	operation/integria_incidents/incident_statistics.php: Added 
	missed files from the last commit

2011-03-17  Sergio Martin <sergio.martin@artica.es>

	* pandoradb_data.sql
	include/functions_config.php
	include/functions_incidents.php
	operation/menu.php
	operation/integria_incidents
	operation/integria_incidents/incident.incident.php
	operation/integria_incidents/incident.php
	operation/integria_incidents/incident.files.php
	operation/integria_incidents/incident.tracking.php
	operation/integria_incidents/incident_detail.php
	operation/integria_incidents/incident.workunits.php
	operation/integria_incidents/incident.download_file.php
	operation/integria_incidents/incident_statistics.php
	operation/integria_incidents/incident.list.php
	godmode/setup/setup.php: Added the integria incidents interface
	with switch in the setup

2011-03-16  Sancho Lerena <slerena@artica.es>

	* operation/agentes/estado_monitores.php: Fixed an ugly error when cannot
	get the policy name. Show unknown in that case, avoiding the SQL error.
	
2011-03-14 Miguel de Dios  <miguel.dedios@artica.es>

	* godmode/reporting/reporting_builder.preview.php: fixed a typing error.

2011-03-11 Miguel de Dios  <miguel.dedios@artica.es>

	* extensions/update_manager.php,
	extensions/update_manager/load_updatemanager.php: changes for PostgreSQL.

2011-03-11 Miguel de Dios  <miguel.dedios@artica.es>

	* include/db/postgresql.php, operation/agentes/estado_agente.php: erased
	the lost call to traces messages.
